<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.qualaroo.ui.NpsView
        android:id="@+id/qualaroo__nps_scores"
        android:clipChildren="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/qualaroo__nps_view_min_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/qualaroo__nps_label_text_size"
            tools:text="Min label" />

        <TextView
            android:id="@+id/qualaroo__nps_view_max_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="@dimen/qualaroo__nps_label_text_size"
            tools:text="Max label" />
    </FrameLayout>

    <Button
        android:id="@+id/qualaroo__nps_view_confirm"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false" />

</LinearLayout>
